fix worker list nd add percent to salaray management

--- a/Frontend/src/app/components/content/worker/salary-management/salary-management.component.css
+++ b/Frontend/src/app/components/content/worker/salary-management/salary-management.component.css
@@ -1,3 +1,20 @@
 input[type="number"] {
     -moz-appearance: number-input
 }
+
+.percent {
+  font-weight: bold;
+  float:right;
+}
+
+.percent::after {
+  content: ' %';
+}
+
+.red {
+  color: indianred;
+}
+
+.green {
+  color: green;
+}
