--- a/Frontend/src/app/components/content/worker/workers-list/workers-list.component.html
+++ b/Frontend/src/app/components/content/worker/workers-list/workers-list.component.html
@@ -1,22 +1,72 @@
 <app-site-header [childMessage]="headerOfSite"></app-site-header>
-<div *ngFor="let worker of workers">
-  <article class="post">
-    <header>
-      <h2 class="post_title">{{worker.user.firstName}} {{worker.user.lastName}}</h2>
-    </header>
-    <img class="post_img" src="assets/images/nico.jpg">
-    <div class="post_text">
-      <p>Wynagrodzenie: {{worker.salary}} zł</p>
-      <p>Premia: {{worker.bonus}} zł</p>
-      <p>Data zatrudnienia: {{worker.dateFrom | getDate}}</p>
-      <p *ngIf="worker.dateTo">Data zwolnienia: {{worker.dateTo | getDate}}</p>
+<mat-tab-group>
+  <mat-tab label="Aktualnie pracujący">
+    <div *ngFor="let worker of workersCurrent">
+      <article class="post">
+        <header>
+          <h2 class="post_title">{{worker.user.firstName}} {{worker.user.lastName}}</h2>
+        </header>
+        <img class="post_img" src="assets/images/nico.jpg">
+        <div class="post_text">
+          <p>Wynagrodzenie: {{worker.salary}} zł</p>
+          <p>Premia: {{worker.bonus}} zł</p>
+          <p>Data zatrudnienia: {{worker.dateFrom | getDate}}</p>
+          <p *ngIf="worker.dateTo">Data zwolnienia: {{worker.dateTo | getDate}}</p>
+        </div>
+        <footer class="post_date">
+          <button mat-button *ngIf="!worker.dateTo" (click)="openDialog(worker.id)">
+            Zwolnij pracownika
+          </button>
+          <button *ngIf="!worker.dateTo" mat-button [routerLink]="['/worker/salary-management/', worker.id]">Zarządzaj wynagrodzeniem</button>
+          <button mat-button [routerLink]="['/worker/', worker.id]">Szczegóły</button>
+        </footer>
+      </article>
     </div>
-    <footer class="post_date">
-      <button mat-button *ngIf="!worker.dateTo" (click)="openDialog(worker.id)">
-        Zwolnij pracownika
-      </button>
-      <button *ngIf="!worker.dateTo" mat-button [routerLink]="['/worker/salary-management/', worker.id]">Zarządzaj wynagrodzeniem</button>
-      <button mat-button [routerLink]="['/worker/', worker.id]">Szczegóły</button>
-    </footer>
-  </article>
-</div>
+  </mat-tab>
+  <mat-tab label="Niepracujący">
+  <div *ngFor="let worker of workersFinishedWork">
+    <article class="post">
+      <header>
+        <h2 class="post_title">{{worker.user.firstName}} {{worker.user.lastName}}</h2>
+      </header>
+      <img class="post_img" src="assets/images/nico.jpg">
+      <div class="post_text">
+        <p>Wynagrodzenie: {{worker.salary}} zł</p>
+        <p>Premia: {{worker.bonus}} zł</p>
+        <p>Data zatrudnienia: {{worker.dateFrom | getDate}}</p>
+        <p *ngIf="worker.dateTo">Data zwolnienia: {{worker.dateTo | getDate}}</p>
+      </div>
+      <footer class="post_date">
+        <button mat-button *ngIf="!worker.dateTo" (click)="openDialog(worker.id)">
+          Zwolnij pracownika
+        </button>
+        <button *ngIf="!worker.dateTo" mat-button [routerLink]="['/worker/salary-management/', worker.id]">Zarządzaj wynagrodzeniem</button>
+        <button mat-button [routerLink]="['/worker/', worker.id]">Szczegóły</button>
+      </footer>
+    </article>
+  </div>
+  </mat-tab>
+  <mat-tab label="Wszyscy">
+  <div *ngFor="let worker of workers">
+    <article class="post">
+      <header>
+        <h2 class="post_title">{{worker.user.firstName}} {{worker.user.lastName}}</h2>
+      </header>
+      <img class="post_img" src="assets/images/nico.jpg">
+      <div class="post_text">
+        <p>Wynagrodzenie: {{worker.salary}} zł</p>
+        <p>Premia: {{worker.bonus}} zł</p>
+        <p>Data zatrudnienia: {{worker.dateFrom | getDate}}</p>
+        <p *ngIf="worker.dateTo">Data zwolnienia: {{worker.dateTo | getDate}}</p>
+      </div>
+      <footer class="post_date">
+        <button mat-button *ngIf="!worker.dateTo" (click)="openDialog(worker.id)">
+          Zwolnij pracownika
+        </button>
+        <button *ngIf="!worker.dateTo" mat-button [routerLink]="['/worker/salary-management/', worker.id]">Zarządzaj wynagrodzeniem</button>
+        <button mat-button [routerLink]="['/worker/', worker.id]">Szczegóły</button>
+      </footer>
+    </article>
+  </div>
+  </mat-tab>
+</mat-tab-group>
