--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -32,6 +32,12 @@
       <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/prisoners'">Lista więźniów</a>
       <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/prisoners/register'">Zarejestruj więźnia</a>
     </div>
+    <a class="menu-item py-2" data-toggle="collapse" href="#jailJobCollapse" role="button" aria-expanded="false"
+       aria-controls="prisonerCollapse"> Praca więźniów <i class='fas fa-angle-down'></i> </a>
+    <div class="collapse" id="jailJobCollapse" data-parent="#navmenu">
+      <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/jail-job'">Rodzaje prac</a>
+      <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/jail-job/schedule'">Przydzielone prace więźniów</a>
+    </div>
     <a class="menu-item py-2" data-toggle="collapse" href="#sickCollapse" role="button" aria-expanded="false"
     aria-controls="sickCollapse"> Zwolnienia <i class='fas fa-angle-down'></i> </a>
     <div class="collapse" id="sickCollapse" data-parent="#navmenu">
@@ -41,7 +47,7 @@
     <a class="menu-item py-2" data-toggle="collapse" href="#executionCollapse" role="button" aria-expanded="false"
     aria-controls="executionCollapse"> Egzekucje <i class='fas fa-angle-down'></i> </a>
     <div class="collapse" id="executionCollapse" data-parent="#navmenu">
-      <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/execution/reservation'">Zarezerwuj egzekucję</a>
+      <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/execution/reservation'">Zaplanuj egzekucje</a>
       <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/executions'">Lista egzekucji</a>
     </div>
     <a class="menu-item py-2" (click)="onLogout()" *ngIf="isLoggedIn$ | async">Wyloguj</a>
