add news module

--- a/Frontend/src/app/components/content/application/apply-job/apply-job.component.css
+++ b/Frontend/src/app/components/content/application/apply-job/apply-job.component.css
@@ -25,5 +25,5 @@ input.ng-touched.ng-invalid {
 .buttonSection{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
