--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -15,6 +15,7 @@
       <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/workers'">Lista pracowników</a>
       <a class="menu-item menu-child colapse-item py-2" [routerLink]="'/department'">Lista działów</a>
       <a class="menu-item menu-child colapse-item py-2" *ngIf="isLoggedIn" [routerLink]="'/alarm'">Alarm więzienny</a>
+      <a class="menu-item menu-child colapse-item py-2" *ngIf="isLoggedIn" [routerLink]="'/news'">Dodaj news</a>
     </div>
     <a class="menu-item py-2" data-toggle="collapse" href="#visitCollapse" role="button" aria-expanded="false"
     aria-controls="visitCollapse" *ngIf="isLoggedIn"> Odwiedziny <i class='fas fa-angle-down'></i> </a>
