Visit reservation added

--- a/Frontend/src/jail-theme.scss
+++ b/Frontend/src/jail-theme.scss
@@ -1,5 +1,6 @@
 @import '~@angular/material/theming';
 @import '~@angular/material/theming';
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 
 @include mat-core();
 
